--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 página HTML. <br>
                 Você pode alterar o layout desta página selecionando diferentes estilos no menu ou
                 selecionando um dos links abaixo:<br>
-                <a href="#" class="simple option">Simples</a>
-                <a href="#" class="modern  option">Moderno</a>
-                <a href="#" class="pro  option">Profissional</a>
+                <a class="simple option">Simples</a>
+                <a class="modern  option">Moderno</a>
+                <a class="pro  option">Profissional</a>
             </p>
             <h2>Sem Estilos</h2>
             <p class="infostyle">Essa página usa elementos DIV para agrupar diferentes seções da página HTML. <br>
                 Clique aqui para ver como a página se parece sem estilos:<br>
-                <a href="#" class="empty  option">Sem Estilos</a>
+                <a class="empty  option">Sem Estilos</a>
             </p>
         </main>
 
