--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="#" />
     <link rel="shortcut icon" href="styleCloud.png" type="image/x-icon" />
     <script src="script.js" defer></script>
     <title>Teste de Estilizações</title>
@@ -18,10 +18,10 @@
         <p class="headText">Use o menu para selecionar diferentes estilos</p>
         <nav>
             <ul id="menulist">
-                <li class="menuitem"><a class="simple">Simples</a></li>
-                <li class="menuitem"><a class="modern">Moderno</a></li>
-                <li class="menuitem"><a class="pro">Profissional</a></li>
-                <li class="menuitem"><a class="empty">Sem Estilos</a></li>
+                <li class="menuitem"><a href="#" class="simple">Simples</a></li>
+                <li class="menuitem"><a href="#" class="modern">Moderno</a></li>
+                <li class="menuitem"><a href="#" class="pro">Profissional</a></li>
+                <li class="menuitem"><a href="#" class="empty">Sem Estilos</a></li>
             </ul>
         </nav>
     </header>
@@ -33,14 +33,14 @@
                 página HTML. <br>
                 Você pode alterar o layout desta página selecionando diferentes estilos no menu ou
                 selecionando um dos links abaixo:<br>
-                <a href="" class="simple option">Simples</a>
-                <a href="" class="modern  option">Moderno</a>
-                <a href="" class="pro  option">Profissional</a>
+                <a href="#" class="simple option">Simples</a>
+                <a href="#" class="modern  option">Moderno</a>
+                <a href="#" class="pro  option">Profissional</a>
             </p>
             <h2>Sem Estilos</h2>
             <p class="infostyle">Essa página usa elementos DIV para agrupar diferentes seções da página HTML. <br>
                 Clique aqui para ver como a página se parece sem estilos:<br>
-                <a href="" class="empty  option">Sem Estilos</a>
+                <a href="#" class="empty  option">Sem Estilos</a>
             </p>
         </main>
 
